[package]
name = "challenge-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "challenge_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["interface-instructions", "init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
spl-transfer-hook-interface = "2.1.0"
spl-token-2022 = { version = "10.0.0", features = ["no-entrypoint"] }
spl-discriminator = "0.5.1"
spl-tlv-account-resolution = "0.11.1"
spl-token-metadata-interface = "0.8.0"
spl-type-length-value = "0.9.0"

[dev-dependencies]
litesvm = "0.9.0"
litesvm-token = "0.9.0"

solana-account = "4.0.0"
solana-address = "2.1"
solana-hash = "4.1"
solana-instruction = "3.1"
solana-keypair = "3.1"
solana-message = "3.0"
solana-native-token = "3.0"
solana-sdk-ids = "3.1"
solana-signer = "3.0"
solana-system-interface = "3.0"
solana-transaction = "3.0"


solana-rpc-client = "3.1.8"
spl-token-2022 = { version = "10.0.0", features = ["no-entrypoint"] }
solana-clock = "~3.0"
spl-associated-token-account = "8.0.0"



